# conjure

./: .gitignore  README.md  __init__.py  blender_manifest.toml  operators.py  panels.py  parse_log.py  preferences.py  properties.py  pyproject.toml  requirements.txt  trust.patch  utils.py
.github/workflows/: gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml
.jules/: bolt.md
tests/: test_performance.py
