[project]
name = "conjure_3d_ai"
version = "0.1.0"
description = "Conjure - Blender Add-on"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.56.0",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
